# sweet_validation

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README_DEV.md  dev.ipynb  index.html  main_dev.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  scheme.yaml  valid.csv
.github/workflows/: CODEOWNERS  main.yml  test_coverage.yml  test_main.yml
api/: index.html
api/api/: index.html
components/overview/: index.html
components/registries/: index.html
components/schema_manager/: index.html
components/storage/: index.html
components/validators/: index.html
docs/: api.md  apidoc.md  index.md
docs/api/: api.md
docs/components/: overview.md  registries.md  schema_manager.md  storage.md  validators.md
docs/frictionless/: frictionless.md
frictionless/frictionless/: index.html
scripts/: create_requirements.sh
search/: search_index.json
sweet_validation/: abstracts.py  exceptions.py  utils.py
sweet_validation/columns/: __init__.py  basecolumns.py  columns.py  validated_items.py  validated_values.py
sweet_validation/items/: __init__.py  column.py  columns.py  valid_item.py  validated_values.py
sweet_validation/models/: columns.py
sweet_validation/protocols/: __init__.py  protocols.py
sweet_validation/registry/: __init__.py  inmemory.py  memory_registry.py  registry.py
sweet_validation/relation_manager/: __init__.py  memory_relation_manager.py  models.py
sweet_validation/schema_manager/: metaschema.json  models.py  schema_manager.py
sweet_validation/storage/: __init__.py  inmemory.py  memory_storage.py  protocols.py  storage.py
sweet_validation/tests/: schemas.py  test_base_columns.py  test_column.py  test_columns.py  test_full_cycle.py  test_inmemory_registry.py  test_inmemory_storage.py  test_memory_storage.py  test_registry_memory.py  test_relation_manager_memory.py  test_schema_manager.py  test_schema_validation.py  test_storage_memory.py  test_storage_memory_schema.py  test_tweaked_validator.py  test_utils.py  (+2 more)
sweetvalidation/: __init__.py
(+18 files in other folders)
